# Funbook

./: .gitignore  .prettierignore  README.md  latest.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.ts
.github/workflows/: release.yml
demo/: blocklist.js.fbtpl  blocklist.py.fbtpl
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/docs/: protpedia.md
src/lib/: README.md  index.ts
src/lib/adapters/: filesystem.ts
src/lib/components/: Block.service.test.ts  Block.svelte  Board.svelte  Dialog.svelte  Header.svelte  Output.svelte  Sidebar.svelte
src/lib/components/blocks/: BlockConnection.example.svelte  BlockConnection.svelte  BlockConnection.test.ts  BlockForm.svelte  BlockForm.test.ts  BlockRenderer.example.svelte  BlockRenderer.svelte  BlockRenderer.test.ts  index.ts
src/lib/components/canvas/: index.ts  (+11 more)
src/lib/errors/: AppError.test.ts  AppError.ts  errorCodes.test.ts  errorCodes.ts  index.ts
src/lib/services/: index.ts
src/lib/stores/: block.store.svelte.ts  block.store.test.ts  canvas.store.svelte.ts  canvas.store.test.ts  drag.store.svelte.ts  index.ts  project.store.svelte.ts  project.store.test.ts
src/lib/test/: blockTestHelpers.ts  testUtils.ts
src/lib/types/: index.ts  tauri.d.ts
src/lib/utils/: blockShapes.ts  connectionUtils.ts  constants.ts  dragUtils.ts  index.ts  projectUtils.ts
src/routes/: +page.svelte
src/test/: helpers.ts  setup.ts  vitest.d.ts
types/: tauri-plugin-updater.d.ts
(+53 files in other folders)
